# lib/class/Api/Aggregate/GetBreakDown/cashApiAggregateGetBreakDownRequest.class.php
@@ -19,4 +19,9 @@ final class cashApiAggregateGetBreakDownRequest
      * @var string
      */
     public $filter = '';
+
+    /**
+     * @var int
+     */
+    public $children_help_parents;
 }
